(menhir
 (flags --reference-graph --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (name hflmc2_syntax)
 (public_name rethfl.syntax)
 (libraries
   hflmc2_util
   hflmc2_options
   menhirLib)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv)))
(env (dev (flags (:standard -warn-error -A -w -3-26-27-33))))
